fix: image on mobile, spacing

--- a/css/style.css
+++ b/css/style.css
@@ -83,24 +83,31 @@ h3 {
 
 /* Header */
 header {
-	margin-bottom: 3rem;
+	margin-bottom: 1rem;
 	position: relative;
 	padding: 0;
 }
 
-header img {
+.profile-photo {
 	width: 400px;
 	height: 400px;
 	border-radius: 50%;
 	object-fit: cover;
 	object-position: 30% 35%;
 	position: absolute;
-	right: 0;
-	top: 0;
+	right: 4rem;
+	top: 4rem;
 }
 
 header h1 {
-	margin-bottom: 0.25rem;
+	margin: 0;
+	padding: 0;
+}
+
+header .title {
+	display: block;
+	margin: 0;
+	padding: 0;
 }
 
 header a {
@@ -109,10 +116,7 @@ header a {
 
 nav {
 	font-size: 1.5rem;
-}
-
-nav p {
-	margin: 0;
+	margin-top: 1rem;
 }
 
 nav a, header .title {
@@ -253,6 +257,13 @@ p {
 
 	h2 {
 		font-size: 1.5rem;
+	}
+
+	.profile-photo {
+		position: static;
+		width: 150px;
+		height: 150px;
+		margin-top: 2rem;
 	}
 
 	.cv main > ul > li > table td:last-child {
